# EPlayer

./: README.md  build.gradle  settings.gradle
app/: build.gradle
lib_eplayer/src/main/cpp/: CMakeLists.txt
lib_eplayer/src/main/cpp/common/: AndroidLog.h  Errors.h  Thread.h
lib_eplayer/src/main/cpp/mediaplayer/: CMakeLists.txt
lib_eplayer/src/main/cpp/mediaplayer/android/: EMediaPlayer.cpp  EMediaPlayer.h  JNIHelp.cpp  com.eplayer.EasyMediaPlayer.cpp
lib_eplayer/src/main/cpp/mediaplayer/android/header/: EMediaPlayer.h
lib_eplayer/src/main/cpp/mediaplayer/source/common/: FFmpegUtils.cpp
lib_eplayer/src/main/cpp/mediaplayer/source/convertor/: AudioResampler.cpp  AudioResampler.h
lib_eplayer/src/main/cpp/mediaplayer/source/decoder/: AudioDecoder.cpp  AudioDecoder.h  MediaDecoder.cpp  VideoDecoder.cpp  VideoDecoder.h
lib_eplayer/src/main/cpp/mediaplayer/source/decoder/header/: AudioDecoder.h  MediaDecoder.h  VideoDecoder.h
lib_eplayer/src/main/cpp/mediaplayer/source/device/: AudioDevice.cpp  VideoDevice.cpp  VideoDevice.h
lib_eplayer/src/main/cpp/mediaplayer/source/device/android/: GLESDevice.cpp  GLESDevice.h  SLESDevice.cpp  SLESDevice.h
lib_eplayer/src/main/cpp/mediaplayer/source/device/header/: AudioDevice.h  VideoDevice.h
lib_eplayer/src/main/cpp/mediaplayer/source/player/: MediaPlayer.cpp  MediaPlayer.h  PlayerState.cpp
lib_eplayer/src/main/cpp/mediaplayer/source/player/header/: MediaPlayer.h  PlayerState.h
lib_eplayer/src/main/cpp/mediaplayer/source/queue/: AVMessageQueue.cpp  FrameQueue.cpp  FrameQueue.h  PacketQueue.cpp  PacketQueue.h
lib_eplayer/src/main/cpp/mediaplayer/source/queue/header/: AVMessageQueue.h  FrameQueue.h  PacketQueue.h
lib_eplayer/src/main/cpp/mediaplayer/source/render/: DisplayRenderNode.cpp  EPlayerEGLContext.cpp  FilterState.cpp  FrameBuffer.cpp  InputRenderNode.cpp  OESRenderNode.cpp  RenderNode.cpp  RenderNodeList.cpp
lib_eplayer/src/main/cpp/mediaplayer/source/render/common/: CoordinateUtils.cpp  EglHelper.cpp  OpenGLUtils.cpp  macros.h  vecmath.cpp
lib_eplayer/src/main/cpp/mediaplayer/source/render/filter/: FilterManager.cpp  GL512LookupTableFilter.cpp  GL64LookupTableFilter.cpp  GLDepthFilter.cpp  GLDepthMixFilter.cpp  GLDrosteFilter.cpp  GLFilter.cpp  GLGaussianBlurFilter.cpp  GLGaussianPassBlurFilter.cpp  GLGroupFilter.cpp  GLIntensityFilter.cpp  GLOutFilter.cpp
lib_eplayer/src/main/cpp/mediaplayer/source/renderer/: CoordinateUtils.cpp  EPlayerEGLContext.cpp  FilterState.cpp  FrameBuffer.cpp  GLFilter.cpp  GLInputABGRFilter.cpp  GLInputABGRFilter.h  GLInputFilter.cpp  GLInputFilter.h  GLInputYUV420PFilter.cpp  InputRenderNode.cpp  InputRenderNode.h  OpenGLUtils.cpp  RenderNode.cpp  RenderNode.h  Shader.cpp  vecmath.h
lib_eplayer/src/main/cpp/mediaplayer/source/sync/: MediaClock.cpp  MediaSync.cpp
lib_eplayer/src/main/cpp/metadata/: CMakeLists.txt  MediaMetadataRetriever.cpp  MediaMetadataRetriever.h  Metadata.cpp  Metadata.h  com_eplayer_EMeiaMetadataRetriever.cpp
lib_eplayer/src/main/cpp/metadata/header/: MediaMetadataRetriever.h  Metadata.h
lib_eplayer/src/main/cpp/soundtouch/: CMakeLists.txt
lib_eplayer/src/main/jni/: CMakeLists.txt
lib_eplayer/src/main/jni/common/: Thread.h
lib_eplayer/src/main/jni/include/libavutil/: ffversion.h
lib_eplayer/src/main/jni/mediaplayer/: CMakeLists.txt
lib_eplayer/src/main/jni/mediaplayer/android/: JNIHelp.cpp  com.eplayer.EasyMediaPlayer.cpp
lib_eplayer/src/main/jni/mediaplayer/source/common/: FFmpegUtils.cpp  FFmpegUtils.h
lib_eplayer/src/main/jni/mediaplayer/source/convertor/: AudioResampler.cpp
lib_eplayer/src/main/jni/mediaplayer/source/decoder/: AudioDecoder.cpp  MediaDecoder.cpp  MediaDecoder.h  VideoDecoder.cpp
lib_eplayer/src/main/jni/mediaplayer/source/device/: AudioDevice.h  VideoDevice.cpp
lib_eplayer/src/main/jni/mediaplayer/source/player/: MediaPlayer.cpp  MediaPlayer.h  PlayerMessage.h  PlayerState.h
lib_eplayer/src/main/jni/mediaplayer/source/queue/: AVMessageQueue.h  PacketQueue.cpp
lib_eplayer/src/main/jni/mediaplayer/source/renderer/: CoordinateUtils.h  EPlayerEGLContext.cpp  EPlayerEGLContext.h  EglHelper.cpp  EglHelper.h  FrameBuffer.cpp  FrameBuffer.h  GLFilter.cpp  GLFilter.h  GLInputABGRFilter.cpp  GLInputFilter.cpp  GLInputYUV420PFilter.cpp  GLInputYUV420PFilter.h  InputRenderNode.cpp  NodeType.h  RenderNode.cpp  vecmath.cpp
lib_eplayer/src/main/jni/mediaplayer/source/sync/: MediaClock.cpp  MediaClock.h  MediaSync.cpp  MediaSync.h
lib_eplayer/src/main/jni/metadata/: CMakeLists.txt  com_eplayer_EMeiaMetadataRetriever.cpp
lib_eplayer/src/main/jni/soundtouch/: CMakeLists.txt
lib_live/: CMakeLists.txt  build.gradle
lib_live/src/main/: AndroidManifest.xml
lib_live/src/main/java/com/live/: AVPublisher.kt  FileManager.kt  LiveConfig.kt  LiveInterfaces.kt  LiveNativeManager.java  LogUtil.kt  MediaEncoder.kt  MediaPublisher.kt  PublishInterfaces.kt
lib_live/src/main/java/com/live/audio/: AudioData.kt  AudioGatherManager.kt  AudioInterfaces.kt  AudioManager.kt
lib_live/src/main/java/com/live/avlive1/: MediaEncoder.kt  MediaPublisher.kt  MediaPusher.kt
lib_live/src/main/java/com/live/avlive2/: AVPublisher.kt  AVPusher.kt  VideoManager.kt
lib_live/src/main/java/com/live/common/: FileManager.kt  PublishInterfaces.kt
lib_live/src/main/java/com/live/muxer/: SrsAllocator.java
lib_live/src/main/java/com/live/simplertmp/: RtmpPublisher.java  Util.java
lib_live/src/main/java/com/live/video/: CameraSurface.kt  CameraSurfaceListener.kt  CameraUtil.kt  VideoData.kt  VideoGatherManager.kt  VideoInterfaces.kt  VideoManager.kt
lib_live/src/main/jni/cpp/: AVQueue.cpp  AudioEncoder.cpp  MediaEncoder.cpp  RtmpLivePush.cpp  VideoEncoder.cpp  WavReader.c  YuvProcess.cpp  YuvUtil.cpp  com_live_LiveNativeManager.cpp  wavreader.c
lib_live/src/main/jni/cpp/common/: BlockQueue.h
lib_live/src/main/jni/cpp/header/: AVQueue.h  AudioEncoder.h  AvData.h  MediaEncoder.h  RtmpLivePush.h  VideoEncoder.h  YuvProcess.h  YuvUtil.h
lib_live/src/main/jni/include/fdk-aac/: channelinfo.h  getopt.h  pnsparam.h  psdec.h
(+220 files in other folders)
